[package]
name = "hook"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
mev-relayer-protos = { workspace = true }
tonic ={ workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
